添加kubesphere的日志系统组件

--- a/cluster/apps/cluster-manage/kubesphere/kustomization.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
   - https://github.com/kubesphere/ks-installer/releases/download/v3.2.0/kubesphere-installer.yaml
   - https://github.com/kubesphere/ks-installer/releases/download/v3.2.0/cluster-configuration.yaml
+patchesStrategicMerge:
+  - cluster-configuration.yaml
