添加kubesphere的kubeedge组件

--- a/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
@@ -8,3 +8,10 @@ spec:
   logging:
     enabled: true
     containerruntime: containerd
+
+  kubeedge:
+    enabled: true
+    cloudCore:
+      cloudHub:
+        advertiseAddress:
+          - "kubeedge-cloudhub.${SECRET_DOMAIN}"
