--- a/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
@@ -9,6 +9,9 @@ spec:
     enabled: true
     containerruntime: containerd
 
+  servicemesh:
+    enabled: true
+
   kubeedge:
     enabled: true
     cloudCore:
