--- a/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
@@ -21,6 +21,10 @@ spec:
   servicemesh:
     enabled: true
 
+  network:
+    topology:
+      type: weave-scope
+
   kubeedge:
     enabled: true
     cloudCore:
