--- a/cluster/apps/programming/gitlab/helm-release.yaml
+++ b/cluster/apps/programming/gitlab/helm-release.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: gitlab
 spec:
   interval: 5m
+  timeout: 30m
   chart:
     spec:
       # renovate: registryUrl=https://charts.gitlab.io/
