--- a/cluster/core/kasten/helm-release.yaml
+++ b/cluster/core/kasten/helm-release.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: kasten-io
 spec:
   interval: 5m
+  timeout: 30m
   chart:
     spec:
       # renovate: registryUrl=https://charts.kasten.io/
