--- a/cluster/core/rook-ceph/helm-ceph-cluster.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-cluster.yaml
@@ -50,6 +50,10 @@ spec:
         # 允许在同一个节点上运行多个mon
         allowMultiplePerNode: true
 
+      dashboard:
+        # 手动指定rook ceph的dashboard为http模式，避免因为自签名证书导致无法正常通过ingress访问
+        ssl: false
+
       placement:
         all:
           # 将所有ceph服务设置为必须在有ceph角色的节点上运行
