--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -18,14 +18,17 @@ stringData:
   SECRET_KASTEN_S3_ENDPOINT: ENC[AES256_GCM,data:FFWjNxlpRXHgVmylQ0uOYYMERCOqm9rTcFJU+2Y=,iv:PJJL5Okz18UpKQkBoGe9YHrWiJJNS40K4+OeXYh+DNY=,tag:62eKVLBquJjaoCJ6bUia8w==,type:str]
   SECRET_NEXTCLOUD_USERNAME: ENC[AES256_GCM,data:jNffPA==,iv:CTtIQ26pVXz1sdE8OjTQ1XKBn0+ux2FUKKdQUSs8gsE=,tag:wHOaOxkb4/zIWG0jBCZS5w==,type:str]
   SECRET_NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:i5rJK0A6UA/nTnFXd8iGuZTwViR68MfjeIkqzU8sM+w=,iv:sqh0i/Cyyi2KHW9fZRtKLIinGCqBq5exVHRyTEYOr2U=,tag:HgGTZVzwK3z2ol25xTk4BQ==,type:str]
+  SECRET_NEXTCLOUD_PGSQL_USERNAME: ENC[AES256_GCM,data:ihjDug==,iv:Ep2OylPRznLIALhbyxNlZP1awy7psL442aatfJVAv4Q=,tag:OAGUfnOgnUJgOVqeRNnoUQ==,type:str]
+  SECRET_NEXTCLOUD_PGSQL_PASSWORD: ENC[AES256_GCM,data:XVgTECEB3STJWgA2TXqtC6D4PfrXMzxzUD5sZIRIcSU=,iv:fZoCVolLOjH787NahXG3iFUn8VapFVWPXaQj/l5a87s=,tag:j4m2pj9daycFJc6pASE0Jg==,type:str]
+  SECRET_NEXTCLOUD_REDIS_PASSWORD: ENC[AES256_GCM,data:U5Z4UCfmZi9aO/0IE71e8xJ8BK/bRAlB9a2n3EX+Kac=,iv:nvY+a6uL+/bBGQdtYQludRowO74K0VXq7mtfjoJ+v9w=,tag:3XVlluee+6iJCq1A2HgXIQ==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2021-09-28T17:42:05Z"
-  mac: ENC[AES256_GCM,data:Hf4YJhlVIo7rSZo2Ssr87sZ7ciWXvXJ2rpnBNJtB/9WNDxBZsHy51lU3dcQ4I+21jMhLUXQA3qfh1FJODDpcBrGewuR4XAuaeNNpGoWSdcA9fSl0eIOC7jxCH8DEp5NLSJi328zQ3ywaALXvfPsS5D8DRdF9sHUw5kdx/idJZOQ=,iv:U8Sc7Xzv1G6ZS3SlRwirLCqm8V/hSkzPIpOk40rvi/I=,tag:+WMvUtEgS/Lxo56G27+myQ==,type:str]
+  lastmodified: "2021-11-24T20:23:22Z"
+  mac: ENC[AES256_GCM,data:HpAC66dRDfrZxVpctKJ6p874a28rfEufErlyYxPMrtlr8XLn5UyRxd07BFs/O13MH8eQz/sl7zHlldARHdWziz3lQjaz8Zxx3uDzqGBjYqnsSymTgrueSV8/ZP8OjF8iR1xHqYv0Fa3d7y3xlidxrR8NWrVAFVAMucXTIdmdBsY=,iv:jWbqXZ0Jpbwwr0edbKUl02b7tT1kyqe/Ppua4KiH5L8=,tag:VF0WPbYTpiJcYUuotfhyfA==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
