--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -47,6 +47,9 @@ spec:
             'overwriteprotocol' => 'https',
           );
 
+    internalDatabase:
+      enabled: false
+
     postgresql:
       enabled: true
       postgresqlUsername: "${SECRET_NEXTCLOUD_PGSQL_USERNAME}"
