开启nexus的容器镜像代理功能

--- a/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
@@ -17,6 +17,10 @@ spec:
         name: sonatype-charts
         namespace: flux-system
   values:
+    nexus:
+      docker:
+        enabled: true
+
     ingress:
       enabled: true
       annotations:
