nexus添加docker.io的容器镜像代理

--- a/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
@@ -20,6 +20,10 @@ spec:
     nexus:
       docker:
         enabled: true
+        registries:
+          - host: "docker-io.nexus.${SECRET_DOMAIN}"
+            port: 5000
+            secretName: docker-io-nexus-tls
 
     ingress:
       enabled: true
