nexus添加quay.io的容器镜像代理

--- a/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
@@ -24,6 +24,9 @@ spec:
           - host: "docker-io.nexus.${SECRET_DOMAIN}"
             port: 5000
             secretName: docker-io-nexus-tls
+          - host: "quay-io.nexus.${SECRET_DOMAIN}"
+            port: 5001
+            secretName: quay-io-nexus-tls
 
     ingress:
       enabled: true
