nexus添加k8s.gcr.io的容器镜像代理

--- a/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
@@ -30,6 +30,9 @@ spec:
           - host: "gcr-io.nexus.${SECRET_DOMAIN}"
             port: 5002
             secretName: gcr-io-nexus-tls
+          - host: "k8s-gcr-io.nexus.${SECRET_DOMAIN}"
+            port: 5003
+            secretName: k8s-gcr-io-nexus-tls
 
     ingress:
       enabled: true
