测试给kasten的各种超时时间都增加十倍

--- a/cluster/core/kasten/helm-release.yaml
+++ b/cluster/core/kasten/helm-release.yaml
@@ -39,3 +39,11 @@ spec:
       tls:
         enabled: true
         secretName: kasten-tls
+    kanister:
+      backupTimeout: 450
+      restoreTimeout: 6000
+      deleteTimeout: 450
+      hookTimeout: 200
+      checkRepoTimeout: 200
+      statsTimeout: 200
+      efsPostRestoreTimeout: 450
