--- a/cluster/apps/cluster-manage/kubesphere/kustomization.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/kustomization.yaml
@@ -5,3 +5,5 @@ resources:
   - https://github.com/kubesphere/ks-installer/releases/download/v3.2.0/kubesphere-installer.yaml
   - https://github.com/kubesphere/ks-installer/releases/download/v3.2.0/cluster-configuration.yaml
   - console-ingress.yaml
+patchesStrategicMerge:
+  - cluster-configuration.yaml
