--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -71,8 +71,8 @@ spec:
       usePassword: true
       password: "${SECRET_NEXTCLOUD_REDIS_PASSWORD}"
 
-    cronjob:
-      enabled: true
+    #    cronjob:
+    #      enabled: true
 
     persistence:
       enabled: true
