--- a/cluster/apps/home-automation/home-assistant/helm-release.yaml
+++ b/cluster/apps/home-automation/home-assistant/helm-release.yaml
@@ -79,6 +79,9 @@ spec:
 
     postgresql:
       enabled: true
+      image:
+        repository: bitnami/postgresql
+        tag: 11.13.0-debian-10-r89
       postgresqlUsername: home-assistant
       postgresqlPassword: home-assistant-pass
       postgresqlDatabase: home-assistant
