--- a/cluster/core/kube-system/traefik/kustomization.yaml
+++ b/cluster/core/kube-system/traefik/kustomization.yaml
@@ -3,5 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - middlewares
+  - config.yaml
   - helm-release.yaml
   - dashboard-ingress.yaml
