为traefik添加额外配置，设置默认证书为通配符证书

--- a/cluster/core/kube-system/traefik/helm-release.yaml
+++ b/cluster/core/kube-system/traefik/helm-release.yaml
@@ -16,6 +16,15 @@ spec:
         name: traefik-charts
         namespace: flux-system
   values:
+    additionalArguments:
+      - "--providers.file.filename=/config/default-cert.yaml"
+    volumes:
+      - name: "${SECRET_DOMAIN/./-}-tls"
+        mountPath: "/certs"
+        type: secret
+      - name: additional-config
+        mountPath: "/config"
+        type: configMap
     deployment:
       kind: DaemonSet
     tolerations:
