为traefik添加忽略所有污点的设置

--- a/cluster/core/kube-system/traefik/helm-release.yaml
+++ b/cluster/core/kube-system/traefik/helm-release.yaml
@@ -27,6 +27,9 @@ spec:
         type: configMap
     deployment:
       kind: DaemonSet
+    tolerations:
+      - operator: Exists
+        effect: NoSchedule
     ingressClass:
       enabled: true
       isDefaultClass: true
