暂停使用flux管理external-snapshotter的所有东西

--- a/cluster/core/kube-system/kustomization.yaml
+++ b/cluster/core/kube-system/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
   - local-path-provisioner
   - metrics-server
-  - snapshot-controller
+#  - snapshot-controller
   - traefik
