--- a/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/cluster-configuration.yaml
@@ -33,3 +33,10 @@ spec:
   network:
     topology:
       type: weave-scope
+
+  kubeedge:
+    enabled: true
+    cloudCore:
+      cloudHub:
+        advertiseAddress:
+          - "${SECRET_KUBEEDGE_CLOUDHUB_ADDRESS}"
