--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -21,14 +21,15 @@ stringData:
   SECRET_NEXTCLOUD_PGSQL_USERNAME: ENC[AES256_GCM,data:ihjDug==,iv:Ep2OylPRznLIALhbyxNlZP1awy7psL442aatfJVAv4Q=,tag:OAGUfnOgnUJgOVqeRNnoUQ==,type:str]
   SECRET_NEXTCLOUD_PGSQL_PASSWORD: ENC[AES256_GCM,data:XVgTECEB3STJWgA2TXqtC6D4PfrXMzxzUD5sZIRIcSU=,iv:fZoCVolLOjH787NahXG3iFUn8VapFVWPXaQj/l5a87s=,tag:j4m2pj9daycFJc6pASE0Jg==,type:str]
   SECRET_NEXTCLOUD_REDIS_PASSWORD: ENC[AES256_GCM,data:U5Z4UCfmZi9aO/0IE71e8xJ8BK/bRAlB9a2n3EX+Kac=,iv:nvY+a6uL+/bBGQdtYQludRowO74K0VXq7mtfjoJ+v9w=,tag:3XVlluee+6iJCq1A2HgXIQ==,type:str]
+  SECRET_KUBEEDGE_CLOUDHUB_ADDRESS: ENC[AES256_GCM,data:GjfO8x5gyB8tLQ1cUKc=,iv:vA4b91OnzEajmhbUQtQ9B3F9tspy8cBe4jqkjmoy984=,tag:Vy0QeQJyiJZmkbiXwl9JuA==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2021-11-24T20:23:22Z"
-  mac: ENC[AES256_GCM,data:HpAC66dRDfrZxVpctKJ6p874a28rfEufErlyYxPMrtlr8XLn5UyRxd07BFs/O13MH8eQz/sl7zHlldARHdWziz3lQjaz8Zxx3uDzqGBjYqnsSymTgrueSV8/ZP8OjF8iR1xHqYv0Fa3d7y3xlidxrR8NWrVAFVAMucXTIdmdBsY=,iv:jWbqXZ0Jpbwwr0edbKUl02b7tT1kyqe/Ppua4KiH5L8=,tag:VF0WPbYTpiJcYUuotfhyfA==,type:str]
+  lastmodified: "2022-01-22T04:58:03Z"
+  mac: ENC[AES256_GCM,data:sbQWZdpVJOp3Wq/ePjuBcVSwxKaLLsKsg8PXd1X2yu16vPsLzBNOh6D61HweW8tk9CD7wmE70cHCxPvEn4zyNioQy88k8BlaCUCqXSjL0Nob6UmdfHXJ3CaQmM5k2FaKpaVX1OinSqYi191jhbX/Gg9jTS2KHfo4555M96bPx9o=,iv:AE7FUxkX6EPMpuggzw5K0yNOproBASbRm/rTOCgoqRE=,tag:ebOLL4W2EAl4RGsjRYW8wA==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
