调高kubesphere的prometheus-operator和fluentbit-operator内存限制，以解决启动时内存占用过高直接被杀掉的问题

--- a/cluster/apps/cluster-manage/kubesphere/fluentbit-operator-fix.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/fluentbit-operator-fix.yaml
@@ -55,7 +55,7 @@ spec:
           resources:
             limits:
               cpu: 100m
-              memory: 50Mi
+              memory: 2Gi
             requests:
               cpu: 10m
               memory: 20Mi
