--- a/cluster/apps/cluster-manage/kubesphere/prometheus-operator-fix.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/prometheus-operator-fix.yaml
@@ -36,7 +36,7 @@ spec:
           resources:
             limits:
               cpu: 200m
-              memory: 200Mi
+              memory: 2Gi
             requests:
               cpu: 100m
               memory: 100Mi
