调高ceph-operator的内存限制，以解决启动时内存占用过高直接被杀掉的问题

--- a/cluster/core/rook-ceph/helm-ceph-operator.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-operator.yaml
@@ -16,6 +16,9 @@ spec:
         name: rook-ceph-charts
         namespace: flux-system
   values:
+    resources:
+      limits:
+        memory: 1Gi
     csi:
       pluginTolerations:
         - key: cloud
