移动修复kubesphere服务的yaml到单独目录，并让renovate忽略它们

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -15,7 +15,8 @@
       "cluster/.+\\.yaml$"
     ],
     "ignorePaths": [
-      "cluster/base/"
+      "cluster/base/",
+      "cluster/apps/cluster-manage/kubesphere/fix/"
     ],
   },
   "regexManagers": [
