--- a/cluster/apps/cluster-manage/kubesphere/kustomization.yaml
+++ b/cluster/apps/cluster-manage/kubesphere/kustomization.yaml
@@ -5,7 +5,6 @@ resources:
   - https://github.com/kubesphere/ks-installer/releases/download/v3.2.1/kubesphere-installer.yaml
   - https://github.com/kubesphere/ks-installer/releases/download/v3.2.1/cluster-configuration.yaml
   - console-ingress.yaml
-  - prometheus-operator-fix.yaml
-  - fluentbit-operator-fix.yaml
+  - fix
 patchesStrategicMerge:
   - cluster-configuration.yaml
