--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -70,6 +70,9 @@ spec:
       enabled: true
       usePassword: true
       password: "${SECRET_NEXTCLOUD_REDIS_PASSWORD}"
+      architecture: standalone
+      replica:
+        replicaCount: 0
 
     #    cronjob:
     #      enabled: true
