--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -18,8 +18,8 @@ stringData:
   SECRET_KASTEN_S3_ENDPOINT: ENC[AES256_GCM,data:FFWjNxlpRXHgVmylQ0uOYYMERCOqm9rTcFJU+2Y=,iv:PJJL5Okz18UpKQkBoGe9YHrWiJJNS40K4+OeXYh+DNY=,tag:62eKVLBquJjaoCJ6bUia8w==,type:str]
   SECRET_NEXTCLOUD_USERNAME: ENC[AES256_GCM,data:jNffPA==,iv:CTtIQ26pVXz1sdE8OjTQ1XKBn0+ux2FUKKdQUSs8gsE=,tag:wHOaOxkb4/zIWG0jBCZS5w==,type:str]
   SECRET_NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:i5rJK0A6UA/nTnFXd8iGuZTwViR68MfjeIkqzU8sM+w=,iv:sqh0i/Cyyi2KHW9fZRtKLIinGCqBq5exVHRyTEYOr2U=,tag:HgGTZVzwK3z2ol25xTk4BQ==,type:str]
-  SECRET_NEXTCLOUD_PGSQL_USERNAME: ENC[AES256_GCM,data:ihjDug==,iv:Ep2OylPRznLIALhbyxNlZP1awy7psL442aatfJVAv4Q=,tag:OAGUfnOgnUJgOVqeRNnoUQ==,type:str]
-  SECRET_NEXTCLOUD_PGSQL_PASSWORD: ENC[AES256_GCM,data:XVgTECEB3STJWgA2TXqtC6D4PfrXMzxzUD5sZIRIcSU=,iv:fZoCVolLOjH787NahXG3iFUn8VapFVWPXaQj/l5a87s=,tag:j4m2pj9daycFJc6pASE0Jg==,type:str]
+  SECRET_NEXTCLOUD_MARIADB_USERNAME: ENC[AES256_GCM,data:iRsy0A==,iv:1J99fWW661oMNj2cxd7qdjWGasFetXtqnE1qqPPfXfc=,tag:zBPIhym2gsS9IYRreGHgNw==,type:str]
+  SECRET_NEXTCLOUD_MARIADB_PASSWORD: ENC[AES256_GCM,data:MXvdYosO7gmcNiCs41YAdrUpQZ9Vv8l3P8W5jdZFP70=,iv:/9f4gT95Cu560wPHG8zy9jY6Eb+t1/AJR8AQMLUd57k=,tag:pENzK0WkPZ4hbw0fNIsXqQ==,type:str]
   SECRET_NEXTCLOUD_REDIS_PASSWORD: ENC[AES256_GCM,data:U5Z4UCfmZi9aO/0IE71e8xJ8BK/bRAlB9a2n3EX+Kac=,iv:nvY+a6uL+/bBGQdtYQludRowO74K0VXq7mtfjoJ+v9w=,tag:3XVlluee+6iJCq1A2HgXIQ==,type:str]
   SECRET_KUBEEDGE_CLOUDHUB_ADDRESS: ENC[AES256_GCM,data:GjfO8x5gyB8tLQ1cUKc=,iv:vA4b91OnzEajmhbUQtQ9B3F9tspy8cBe4jqkjmoy984=,tag:Vy0QeQJyiJZmkbiXwl9JuA==,type:str]
 sops:
@@ -28,8 +28,8 @@ sops:
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2022-01-22T04:58:03Z"
-  mac: ENC[AES256_GCM,data:sbQWZdpVJOp3Wq/ePjuBcVSwxKaLLsKsg8PXd1X2yu16vPsLzBNOh6D61HweW8tk9CD7wmE70cHCxPvEn4zyNioQy88k8BlaCUCqXSjL0Nob6UmdfHXJ3CaQmM5k2FaKpaVX1OinSqYi191jhbX/Gg9jTS2KHfo4555M96bPx9o=,iv:AE7FUxkX6EPMpuggzw5K0yNOproBASbRm/rTOCgoqRE=,tag:ebOLL4W2EAl4RGsjRYW8wA==,type:str]
+  lastmodified: "2022-01-24T02:03:39Z"
+  mac: ENC[AES256_GCM,data:lxu/5cU87PcFm7jEgG1esWgjJz/q7lQW0IkcCqipGSxWzvVYiDQTZV2dMp1pyhMBJ1BLeD0XpNSNfG0ovZ6dqfODB+wKutJQIgMWdPHg+BGh/Bn0KsS4nr2wmJCooDvQpnmrrOlORtDrXcSinC1lzYKa530rDLJVnyG5f9JnAto=,iv:9lC/fMvCCe5HW5JwffqXJsVSQ+dHLZ/A4wSXebeOrmo=,tag:JlTMWMgNEfqrCl2kKnb/JA==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
