--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -75,8 +75,8 @@ spec:
       replica:
         replicaCount: 0
 
-    #    cronjob:
-    #      enabled: true
+    cronjob:
+      enabled: true
 
     persistence:
       enabled: true
