让nextcloud通过宿主机的rclone挂载onedrive

--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -59,6 +59,9 @@ spec:
         - name: screenshot-files
           persistentVolumeClaim:
             claimName: screenshot-files
+        - name: onedrive
+          hostPath:
+            path: /mnt/onedrive
       extraVolumeMounts:
         - name: camera-files
           mountPath: /share/camera
@@ -68,6 +71,8 @@ spec:
           mountPath: /share/recording
         - name: screenshot-files
           mountPath: /share/screenshot
+        - name: onedrive
+          mountPath: /share/onedrive
 
     internalDatabase:
       enabled: false
