--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -22,14 +22,15 @@ stringData:
   SECRET_NEXTCLOUD_MARIADB_PASSWORD: ENC[AES256_GCM,data:MXvdYosO7gmcNiCs41YAdrUpQZ9Vv8l3P8W5jdZFP70=,iv:/9f4gT95Cu560wPHG8zy9jY6Eb+t1/AJR8AQMLUd57k=,tag:pENzK0WkPZ4hbw0fNIsXqQ==,type:str]
   SECRET_NEXTCLOUD_REDIS_PASSWORD: ENC[AES256_GCM,data:U5Z4UCfmZi9aO/0IE71e8xJ8BK/bRAlB9a2n3EX+Kac=,iv:nvY+a6uL+/bBGQdtYQludRowO74K0VXq7mtfjoJ+v9w=,tag:3XVlluee+6iJCq1A2HgXIQ==,type:str]
   SECRET_KUBEEDGE_CLOUDHUB_ADDRESS: ENC[AES256_GCM,data:GjfO8x5gyB8tLQ1cUKc=,iv:vA4b91OnzEajmhbUQtQ9B3F9tspy8cBe4jqkjmoy984=,tag:Vy0QeQJyiJZmkbiXwl9JuA==,type:str]
+  SECRET_PHOTOPRISM_PASSWORD: ENC[AES256_GCM,data:i3rpGQ5qx9xCHIN0BJqYLh1U7i7jEFBsEqamvtTSP+I=,iv:/uDmP6CjagnEyy6u7QxMPt3DEwmRcNbzSPywn2ZOg1g=,tag:NJmw4yoAQKv9OFlwecRTKQ==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2022-01-24T02:03:39Z"
-  mac: ENC[AES256_GCM,data:lxu/5cU87PcFm7jEgG1esWgjJz/q7lQW0IkcCqipGSxWzvVYiDQTZV2dMp1pyhMBJ1BLeD0XpNSNfG0ovZ6dqfODB+wKutJQIgMWdPHg+BGh/Bn0KsS4nr2wmJCooDvQpnmrrOlORtDrXcSinC1lzYKa530rDLJVnyG5f9JnAto=,iv:9lC/fMvCCe5HW5JwffqXJsVSQ+dHLZ/A4wSXebeOrmo=,tag:JlTMWMgNEfqrCl2kKnb/JA==,type:str]
+  lastmodified: "2022-01-26T11:14:31Z"
+  mac: ENC[AES256_GCM,data:xqyK7lyz27Q4cNR85w3KuGjhU2pxo4WSLGeAiY1gu47GiqTIfuBNYJDr/70ZViQg3nZ5OTtqyWgnxSFjEfT2caWeqUueUbqhonulOHwI+fK8gm25ZrAiGlMvm3GiEh6ItO6a/0IhbACLzcviJtlE+8rW/ZXX2xil2mixS4mQaug=,iv:Rb8qXm4Hq1jWv7Jk50n01fJNHy+pNNxgFlJrSAZFR78=,tag:HcsOwFh6OpvPhj7NKmKPSA==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
