--- a/cluster/apps/file-service/photoprism/kustomization.yaml
+++ b/cluster/apps/file-service/photoprism/kustomization.yaml
@@ -2,8 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - photoprism
-  - pvcs
-  - resilio-sync
-  - samba
-  - nextcloud
+  - config-pvc.yaml
+  - helm-release.yaml
