设置KubeVirt的virt-controller和virt-api只在具有控制平面角色的节点上运行 https://kubevirt.io/user-guide/operations/installation/#restricting-kubevirt-components-node-placement

--- a/cluster/core/kubevirt/override-kubevirt-config.yaml
+++ b/cluster/core/kubevirt/override-kubevirt-config.yaml
@@ -13,3 +13,7 @@ spec:
         - HostDisk
         - HypervStrictCheck
         - CPUManager
+  infra:
+    nodePlacement:
+      nodeSelector:
+        node-role.kubernetes.io/control-plane: ""
