设置KubeVirt的virt-handler只在具有地点标记为home的节点上运行 https://kubevirt.io/user-guide/operations/installation/#restricting-kubevirt-components-node-placement

--- a/cluster/core/kubevirt/override-kubevirt-config.yaml
+++ b/cluster/core/kubevirt/override-kubevirt-config.yaml
@@ -17,3 +17,7 @@ spec:
     nodePlacement:
       nodeSelector:
         node-role.kubernetes.io/control-plane: ""
+  workloads:
+    nodePlacement:
+      nodeSelector:
+        location: "home"
