设置Nextcloud的定时任务只在具有地点标记为home的节点上运行

--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -113,6 +113,8 @@ spec:
 
     cronjob:
       enabled: true
+      nodeSelector:
+        location: "home"
 
     persistence:
       enabled: true
