给Nextcloud的定时任务指定镜像和版本，避免出现可能存在的版本不一致问题

--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -113,6 +113,9 @@ spec:
 
     cronjob:
       enabled: true
+      image:
+        repository: nextcloud
+        tag: 23.0.2-fpm
       nodeSelector:
         location: "home"
 
