设置Nextcloud的主服务只在具有地点标记为home的节点上运行

--- a/cluster/apps/file-service/nextcloud/helm-release.yaml
+++ b/cluster/apps/file-service/nextcloud/helm-release.yaml
@@ -119,6 +119,9 @@ spec:
       nodeSelector:
         location: "home"
 
+    nodeSelector:
+      location: "home"
+
     persistence:
       enabled: true
       existingClaim: nextcloud-data
