--- a/cluster/core/kasten/kustomization.yaml
+++ b/cluster/core/kasten/kustomization.yaml
@@ -3,6 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
-  - profiles
-  - dr-secret.sops.yaml
-  - policies
+#  - profiles
+#  - dr-secret.sops.yaml
+#  - policies
