--- a/cluster/apps/home-automation/home-assistant/helm-release.yaml
+++ b/cluster/apps/home-automation/home-assistant/helm-release.yaml
@@ -42,6 +42,8 @@ spec:
       config:
         enabled: true
         existingClaim: home-assistant-config
+    nodeSelector:
+      location: "home"
 
     addons:
       codeserver:
@@ -76,6 +78,8 @@ spec:
         volumeMounts:
           - name: config
             mountPath: /config
+        nodeSelector:
+          location: "home"
 
     postgresql:
       enabled: true
@@ -88,3 +92,5 @@ spec:
       persistence:
         enabled: true
         existingClaim: home-assistant-postgresql-data
+      nodeSelector:
+        location: "home"
