设置Nexus只在具有地点标记为home的节点上运行

--- a/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
@@ -18,6 +18,9 @@ spec:
         namespace: flux-system
   values:
     nexus:
+      nodeSelector:
+        location: "home"
+
       docker:
         enabled: true
         registries:
