设置Nexus申请的存储空间为100G

--- a/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
+++ b/cluster/apps/programming/nexus-repository-manager/helm-release.yaml
@@ -52,3 +52,7 @@ spec:
         - secretName: nexus-tls
           hosts:
             - "nexus.${SECRET_DOMAIN}"
+
+    persistence:
+      enabled: true
+      storageSize: 100Gi
