设置Rook的Ceph Operator只在具有地点标记为home的节点上运行

--- a/cluster/core/rook-ceph/helm-ceph-operator.yaml
+++ b/cluster/core/rook-ceph/helm-ceph-operator.yaml
@@ -19,6 +19,8 @@ spec:
     resources:
       limits:
         memory: 1Gi
+    nodeSelector:
+      location: "home"
     csi:
       pluginTolerations:
         - key: cloud
