--- a/cluster/apps/entertainment/radarr/helm-release.yaml
+++ b/cluster/apps/entertainment/radarr/helm-release.yaml
@@ -17,6 +17,9 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    nodeSelector:
+      location: "home"
+
     image:
       repository: ghcr.io/k8s-at-home/radarr
       tag: v4.0.5.5981
