--- a/cluster/base/flux-system/gotk-components.yaml
+++ b/cluster/base/flux-system/gotk-components.yaml
@@ -4016,6 +4016,7 @@ spec:
           name: temp
       nodeSelector:
         kubernetes.io/os: linux
+        location: "home"
       securityContext:
         fsGroup: 1337
       serviceAccountName: helm-controller
@@ -4098,6 +4099,7 @@ spec:
           name: temp
       nodeSelector:
         kubernetes.io/os: linux
+        location: "home"
       securityContext:
         fsGroup: 1337
       serviceAccountName: kustomize-controller
@@ -4185,6 +4187,7 @@ spec:
           name: temp
       nodeSelector:
         kubernetes.io/os: linux
+        location: "home"
       securityContext:
         fsGroup: 1337
       serviceAccountName: notification-controller
@@ -4276,6 +4279,7 @@ spec:
           name: tmp
       nodeSelector:
         kubernetes.io/os: linux
+        location: "home"
       securityContext:
         fsGroup: 1337
       serviceAccountName: source-controller
