--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   #  - 3d-print
   - cluster-manage
-#  - entertainment
+  - entertainment
   - file-service
   - home-automation
   - monitoring
