给Sonarr加上配置文件持久化存储

--- a/cluster/apps/entertainment/sonarr/helm-release.yaml
+++ b/cluster/apps/entertainment/sonarr/helm-release.yaml
@@ -27,6 +27,11 @@ spec:
     env:
       TZ: "Asia/Shanghai"
 
+    persistence:
+      config:
+        enabled: true
+        existingClaim: sonarr-config
+
     ingress:
       main:
         enabled: true
