--- a/cluster/apps/entertainment/radarr/helm-release.yaml
+++ b/cluster/apps/entertainment/radarr/helm-release.yaml
@@ -27,6 +27,11 @@ spec:
     env:
       TZ: "Asia/Shanghai"
 
+    persistence:
+      config:
+        enabled: true
+        existingClaim: radarr-config
+
     ingress:
       main:
         enabled: true
