--- a/cluster/apps/entertainment/lidarr/kustomization.yaml
+++ b/cluster/apps/entertainment/lidarr/kustomization.yaml
@@ -2,8 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - jackett
-  - lidarr
-  - qbittorrent
-  - radarr
-  - sonarr
+  - config-pvc.yaml
+  - helm-release.yaml
