给sonarr、radarr、lidarr、bazarr添加挂载媒体存储PVC

--- a/cluster/apps/entertainment/radarr/helm-release.yaml
+++ b/cluster/apps/entertainment/radarr/helm-release.yaml
@@ -31,6 +31,10 @@ spec:
       config:
         enabled: true
         existingClaim: radarr-config
+      media:
+        enabled: true
+        mountPath: /media
+        existingClaim: media-files
 
     ingress:
       main:
