--- a/cluster/apps/entertainment/bazarr/helm-release.yaml
+++ b/cluster/apps/entertainment/bazarr/helm-release.yaml
@@ -31,6 +31,10 @@ spec:
       config:
         enabled: true
         existingClaim: bazarr-config
+      media:
+        enabled: true
+        mountPath: /media
+        existingClaim: media-files
 
     ingress:
       main:
