给qbittorrent添加挂载两个PVC

--- a/cluster/apps/entertainment/qbittorrent/helm-release.yaml
+++ b/cluster/apps/entertainment/qbittorrent/helm-release.yaml
@@ -31,6 +31,14 @@ spec:
       config:
         enabled: true
         existingClaim: qbittorrent-config
+      media:
+        enabled: true
+        mountPath: /media
+        existingClaim: media-files
+      downloads:
+        enabled: true
+        mountPath: /downloads
+        existingClaim: download-files
 
     ingress:
       main:
