给sonarr、radarr、lidarr添加挂载临时下载用的PVC

--- a/cluster/apps/entertainment/lidarr/helm-release.yaml
+++ b/cluster/apps/entertainment/lidarr/helm-release.yaml
@@ -35,6 +35,10 @@ spec:
         enabled: true
         mountPath: /media
         existingClaim: media-files
+      downloads:
+        enabled: true
+        mountPath: /downloads
+        existingClaim: download-files
 
     ingress:
       main:
