--- a/cluster/apps/entertainment/pvcs/kustomization.yaml
+++ b/cluster/apps/entertainment/pvcs/kustomization.yaml
@@ -2,5 +2,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - anime-files.yaml
   - download-pvc.yaml
   - media-pvc.yaml
+  - movie-files.yaml
+  - music-files.yaml
+  - tv-files.yaml
