调整Lidarr的存储PVC，改为使用独立存储音乐类型文件的PVC

--- a/cluster/apps/entertainment/lidarr/helm-release.yaml
+++ b/cluster/apps/entertainment/lidarr/helm-release.yaml
@@ -31,10 +31,10 @@ spec:
       config:
         enabled: true
         existingClaim: lidarr-config
-      media:
+      music:
         enabled: true
-        mountPath: /media
-        existingClaim: media-files
+        mountPath: /music
+        existingClaim: music-files
       downloads:
         enabled: true
         mountPath: /downloads
