--- a/cluster/apps/entertainment/radarr/helm-release.yaml
+++ b/cluster/apps/entertainment/radarr/helm-release.yaml
@@ -31,10 +31,10 @@ spec:
       config:
         enabled: true
         existingClaim: radarr-config
-      media:
+      movie:
         enabled: true
-        mountPath: /media
-        existingClaim: media-files
+        mountPath: /movie
+        existingClaim: movie-files
       downloads:
         enabled: true
         mountPath: /downloads
