调整Sonarr的存储PVC，改为使用独立存储电视剧和动漫类型文件的PVC

--- a/cluster/apps/entertainment/sonarr/helm-release.yaml
+++ b/cluster/apps/entertainment/sonarr/helm-release.yaml
@@ -31,10 +31,14 @@ spec:
       config:
         enabled: true
         existingClaim: sonarr-config
-      media:
+      tv:
         enabled: true
-        mountPath: /media
-        existingClaim: media-files
+        mountPath: /tv
+        existingClaim: tv-files
+      anime:
+        enabled: true
+        mountPath: /anime
+        existingClaim: anime-files
       downloads:
         enabled: true
         mountPath: /downloads
