--- a/cluster/apps/entertainment/sonarr/helm-release.yaml
+++ b/cluster/apps/entertainment/sonarr/helm-release.yaml
@@ -31,6 +31,10 @@ spec:
       config:
         enabled: true
         existingClaim: sonarr-config
+      media:
+        enabled: true
+        mountPath: /media
+        existingClaim: media-files
       tv:
         enabled: true
         mountPath: /tv
