--- a/cluster/apps/entertainment/jellyfin/config-pvc.yaml
+++ b/cluster/apps/entertainment/jellyfin/config-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jackett-config
+  name: jellyfin-config
   namespace: entertainment
 spec:
   accessModes:
