将之前给bazarr挂载的media pvc改为拆分后的

--- a/cluster/apps/entertainment/bazarr/helm-release.yaml
+++ b/cluster/apps/entertainment/bazarr/helm-release.yaml
@@ -31,10 +31,18 @@ spec:
       config:
         enabled: true
         existingClaim: bazarr-config
-      media:
+      movie:
         enabled: true
-        mountPath: /media
-        existingClaim: media-files
+        mountPath: /movie
+        existingClaim: movie-files
+      tv:
+        enabled: true
+        mountPath: /tv
+        existingClaim: tv-files
+      anime:
+        enabled: true
+        mountPath: /anime
+        existingClaim: anime-files
 
     ingress:
       main:
