--- a/cluster/apps/entertainment/plex/helm-release.yaml
+++ b/cluster/apps/entertainment/plex/helm-release.yaml
@@ -21,8 +21,8 @@ spec:
       location: "home"
 
     image:
-      repository: linuxserver/plex
-      tag: 1.25.9
+      repository: plexinc/pms-docker
+      tag: 1.26.0.5715-8cf78dab3
 
     env:
       TZ: "Asia/Shanghai"
