修改plex的资源文件挂载目录

--- a/cluster/apps/entertainment/plex/helm-release.yaml
+++ b/cluster/apps/entertainment/plex/helm-release.yaml
@@ -33,19 +33,19 @@ spec:
         existingClaim: plex-config
       anime:
         enabled: true
-        mountPath: /anime
+        mountPath: /data/anime
         existingClaim: anime-files
       movie:
         enabled: true
-        mountPath: /movie
+        mountPath: /data/movie
         existingClaim: movie-files
       music:
         enabled: true
-        mountPath: /music
+        mountPath: /data/music
         existingClaim: music-files
       tv:
         enabled: true
-        mountPath: /tv
+        mountPath: /data/tv
         existingClaim: tv-files
 
     ingress:
