--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -23,14 +23,15 @@ stringData:
   SECRET_NEXTCLOUD_REDIS_PASSWORD: ENC[AES256_GCM,data:U5Z4UCfmZi9aO/0IE71e8xJ8BK/bRAlB9a2n3EX+Kac=,iv:nvY+a6uL+/bBGQdtYQludRowO74K0VXq7mtfjoJ+v9w=,tag:3XVlluee+6iJCq1A2HgXIQ==,type:str]
   SECRET_KUBEEDGE_CLOUDHUB_ADDRESS: ENC[AES256_GCM,data:GjfO8x5gyB8tLQ1cUKc=,iv:vA4b91OnzEajmhbUQtQ9B3F9tspy8cBe4jqkjmoy984=,tag:Vy0QeQJyiJZmkbiXwl9JuA==,type:str]
   SECRET_PHOTOPRISM_PASSWORD: ENC[AES256_GCM,data:i3rpGQ5qx9xCHIN0BJqYLh1U7i7jEFBsEqamvtTSP+I=,iv:/uDmP6CjagnEyy6u7QxMPt3DEwmRcNbzSPywn2ZOg1g=,tag:NJmw4yoAQKv9OFlwecRTKQ==,type:str]
+  SECRET_PLEX_CLAIM: ENC[AES256_GCM,data:vHCLE95chLLaRUn3MTt5gl4Al6I00hN/XAk=,iv:ZQcSYQzFOXHyV7/sTtFmZXQyjHPy0SHypQQoTfx5yDU=,tag:tO0dAPEV5Rx9come6pdq/Q==,type:str]
 sops:
   kms: [ ]
   gcp_kms: [ ]
   azure_kv: [ ]
   hc_vault: [ ]
   age: [ ]
-  lastmodified: "2022-01-26T11:14:31Z"
-  mac: ENC[AES256_GCM,data:xqyK7lyz27Q4cNR85w3KuGjhU2pxo4WSLGeAiY1gu47GiqTIfuBNYJDr/70ZViQg3nZ5OTtqyWgnxSFjEfT2caWeqUueUbqhonulOHwI+fK8gm25ZrAiGlMvm3GiEh6ItO6a/0IhbACLzcviJtlE+8rW/ZXX2xil2mixS4mQaug=,iv:Rb8qXm4Hq1jWv7Jk50n01fJNHy+pNNxgFlJrSAZFR78=,tag:HcsOwFh6OpvPhj7NKmKPSA==,type:str]
+  lastmodified: "2022-04-24T18:55:49Z"
+  mac: ENC[AES256_GCM,data:LPtWF+clfRvr6rKGN14jQOlgkuj6qbvf3bNnVGtFs1bopsdJG55bYHLNZ5TEOk7FTM9QJ4isjcoROwnR93TH8/dZK3BDoqPCEbKtojw4Dqs2typ1TiQjUOr72U32JDS62Eo4JeC2WKcIOQIBaOGm8PAwXzTqNU55NU+A8sv4kxY=,iv:x2ZPfLtx935ijnfSLaO8XwTCfL0/FvCMU93l80ff2CU=,tag:gGTPAw9VtuKZonwXBkw9Ag==,type:str]
   pgp:
     - created_at: "2021-07-14T11:43:40Z"
       enc: |
@@ -73,4 +74,4 @@ sops:
         -----END PGP MESSAGE-----
       fp: A092F959BA0505A15DD0DE90E7B11D65218B8FD2
   encrypted_regex: ^(data|stringData)$
-  version: 3.7.1
+  version: 3.7.2
