开启plex的dlna端口

--- a/cluster/apps/entertainment/plex/helm-release.yaml
+++ b/cluster/apps/entertainment/plex/helm-release.yaml
@@ -49,6 +49,12 @@ spec:
         mountPath: /data/tv
         existingClaim: tv-files
 
+    service:
+      dnla-tcp:
+        enabled: true
+      dnla-udp:
+        enabled: true
+
     ingress:
       main:
         enabled: true
